test/ui/src/compile_fail/std/emit_props_non_static.stderr
error[E0521]: borrowed data escapes outside of function
  --> src/compile_fail/std/emit_props_non_static.rs:10:28
   |
 9 | pub fn exec(x: &InternalRef<'_>) {
   |             -
   |             |
   |             `x` is a reference that is only valid in the function body
   |             has type `&InternalRef<'1>`
10 |     emit::emit!("template {x}");
   |                            ^
   |                            |
   |                            `x` escapes the function body here
   |                            argument requires that `'1` must outlive `'static`
